# one-do-three

./: Cargo.toml  README.md  tasks.json  tasks_amir.json  users.json
src/: lib.rs  main.rs
src/modules/: mod.rs
src/modules/admin/: config.rs  credentials.rs  mod.rs  setup.rs
src/modules/auth/: mod.rs  password.rs  store.rs  tokens.rs  user_interface.rs  verification.rs
src/modules/email/: manager.rs  mod.rs  setup.rs  smtp.rs  templates.rs
src/modules/encryption/: crypto.rs  keys.rs  mod.rs
src/modules/security/: keyring.rs  mod.rs
src/modules/tasks/: mod.rs  model.rs  progress.rs  storage.rs  user_interface.rs
src/modules/utils/: io.rs  logging.rs  mod.rs  time.rs
