[package]
name = "one-do-three"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"  # For generating random salt and IV
aes = "0.7"
block-modes = "0.8"
pkcs7 = { version = "0.4.0-pre.1", features = [] }
pbkdf2 = "0.10"
hmac = "0.12"
sha2 = "0.10"
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
clap = "4.0"
itertools = "0.10"