[package]
name = "one-do-three"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7"
block-modes = "0.8"
clap = "4.0"
hmac = "0.12"
itertools = "0.10"
keyring = "2.0"
lazy_static = "1.4"
pbkdf2 = "0.11"
rand = "0.8"
rpassword = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
lettre = "0.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
aes-gcm = "0.10.1"
